# estebanf-knowledge-graphrag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: prd.md
docs/plans/: 2026-04-17-chunking-embedding-design.md  2026-04-17-ingestion-pipeline-design.md  2026-04-18-ingestion-prd-remediation.md  2026-04-20-graph-linking-perf.md  2026-04-21-answer-prompt-design.md  (+17 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
scripts/: backfill_entity_embeddings.py  backup.sh  delete_legacy_graph_edges.py  delete_youtube_sources.py  profile_retrieve.py  remediate_heading_chunks.py  remediate_image_placeholders.py  remediate_insights.py  reset.sh  start.sh  stop.sh
src/rag/: cli.py  (+24 more)
tests/: test_answering.py  test_api.py  test_api_community.py  test_chunk_validation.py  test_chunking.py  test_cli_community.py  test_cli_health.py  test_cli_imports.py  test_cli_ingest.py  test_cli_jobs.py  test_cli_retrieve.py  test_cli_search.py  test_cli_sources.py  test_community.py  test_config.py  test_delete_legacy_graph_edges.py  test_delete_youtube_sources.py  test_embedding.py  test_graph_db.py  test_graph_extraction.py  test_graph_linking.py  test_hybrid_search.py  test_image_description.py  test_ingestion.py  test_ingestion_submit.py  test_insight_extraction.py  test_job_lifecycle.py  test_observability.py  test_parser.py  test_profiling.py  test_prompts.py  test_remediate_insights_script.py  test_remediation.py  test_retrieval.py  test_storage.py  test_worker.py
(+29 files in other folders)
